prevent white space breaks

--- a/src/styles/components/LinkButton.scss
+++ b/src/styles/components/LinkButton.scss
@@ -1,8 +1,9 @@
 .a-btn {
 	display: inline-block;
-	margin-right: 32px;
-	padding: 4px 32px;
+	padding: 0.2em 1em;
+	text-align: center;
 	text-decoration: none;
+	white-space: nowrap;
 	font-family: 'Merriweather';
 	font-size: 1em;
 	box-shadow: 0px 3px 1px 1px rgba(0, 0, 0, 0.25);
